# capnweb_types

./: Cargo.toml  README.md
crates/capnweb_types/: Cargo.toml
crates/capnweb_types/examples/: simple.rs
crates/capnweb_types/src/: expression.rs  lib.rs
crates/capnweb_types/tests/: lib_tests.rs
crates/capnweb_types/tests/snapshots/: lib_tests__edge_case_tests__edge_case_values-2.snap  lib_tests__edge_case_tests__edge_case_values-3.snap  lib_tests__edge_case_tests__unicode_and_special_characters-2.snap  lib_tests__edge_case_tests__unicode_and_special_characters.snap  lib_tests__roundtrip_tests__message_roundtrip_case_1.snap  lib_tests__roundtrip_tests__message_roundtrip_case_2.snap  lib_tests__roundtrip_tests__message_roundtrip_case_3.snap  lib_tests__roundtrip_tests__message_roundtrip_case_4.snap  lib_tests__roundtrip_tests__message_roundtrip_case_5.snap  lib_tests__roundtrip_tests__roundtrip_case_0.snap  lib_tests__roundtrip_tests__roundtrip_case_1.snap  lib_tests__roundtrip_tests__roundtrip_case_12.snap  lib_tests__roundtrip_tests__roundtrip_case_13.snap  lib_tests__roundtrip_tests__roundtrip_case_14.snap  lib_tests__roundtrip_tests__roundtrip_case_15.snap  lib_tests__roundtrip_tests__roundtrip_case_16.snap  lib_tests__roundtrip_tests__roundtrip_case_2.snap  lib_tests__roundtrip_tests__roundtrip_case_4.snap  lib_tests__roundtrip_tests__roundtrip_case_5.snap  lib_tests__roundtrip_tests__roundtrip_case_7.snap  lib_tests__roundtrip_tests__roundtrip_case_8.snap
examples/: simple.rs
src/: lib.rs
tests/snapshots/: lib_tests__edge_case_tests__edge_case_values.snap  (+12 more)
