[package]
name = "capnweb_types"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust type definitions for the Cap'n Web RPC protocol"
repository = "https://github.com/Dr-Emann/capnweb_types"
keywords = ["capnweb", "rpc"]
categories = ["network-programming", "parser-implementations"]
readme = "README.md"

[dependencies]
serde_core = "1.0"

[dev-dependencies]
serde_json = "1.0"
insta = { version = "1.0", features = ["json"] }
